[gd_scene load_steps=5 format=4 uid="uid://chj3t7thoume4"]

[ext_resource type="Script" uid="uid://cm52ghsqar4ki" path="res://scripts/environment/rooms/battle_room.gd" id="1_x1f2m"]
[ext_resource type="Texture2D" uid="uid://cvnm22lukpuw5" path="res://assets/sprites/environment/rooms/room_type_1/walls_floor.png" id="2_rertr"]
[ext_resource type="TileSet" uid="uid://cu20rhvtxoxvf" path="res://resources/tileset/rooms/room_1.tres" id="3_x1f2m"]
[ext_resource type="Texture2D" uid="uid://c40epum6bu5s3" path="res://icon.svg" id="4_f4otk"]

[node name="BattleRoom" type="Node2D"]
script = ExtResource("1_x1f2m")

[node name="BackgroupSprite2D" type="Sprite2D" parent="."]
position = Vector2(409, 204)
scale = Vector2(200, 200)
texture = ExtResource("2_rertr")
region_enabled = true
region_rect = Rect2(16, 16, 8, 8)

[node name="TileMapLayers" type="Node2D" parent="."]

[node name="BackgroundFloorTileMapLayer" type="TileMapLayer" parent="TileMapLayers"]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAFAAIAAgAAAAkAAAAGAAIAAgABAAkAAAAHAAIAAgABAAkAAAAIAAIAAgABAAkAAAAJAAIAAgABAAkAAAAKAAIAAgABAAkAAAALAAIAAgABAAkAAAAMAAIAAgABAAkAAAANAAIAAgABAAkAAAAOAAIAAgABAAkAAAAPAAIAAgABAAkAAAAQAAIAAgABAAkAAAARAAIAAgABAAkAAAASAAIAAgABAAkAAAATAAIAAgABAAkAAAAUAAIAAgABAAkAAAAVAAIAAgABAAkAAAAWAAIAAgABAAkAAAAXAAIAAgACAAkAAAAFAAMAAgAAAAoAAAAFAAQAAgAAAAoAAAAFAAUAAgAAAAoAAAAFAAYAAgAAAAoAAAAFAAcAAgAAAAoAAAAFAAgAAgAAAAoAAAAFAAkAAgAAAAoAAAAFAAoAAgAAAAoAAAAFAAsAAgAAAAoAAAAFAAwAAgAAAAoAAAAFAA0AAgAAAAsAAAAXAA0AAgACAAsAAAAXAAMAAgACAAoAAAAXAAQAAgACAAoAAAAXAAUAAgACAAoAAAAXAAYAAgACAAoAAAAXAAcAAgACAAoAAAAXAAgAAgACAAoAAAAXAAkAAgACAAoAAAAXAAoAAgACAAoAAAAXAAsAAgACAAoAAAAXAAwAAgACAAoAAAAWAA0AAgABAAsAAAAVAA0AAgABAAsAAAAUAA0AAgABAAsAAAATAA0AAgABAAsAAAASAA0AAgABAAsAAAARAA0AAgABAAsAAAAQAA0AAgABAAsAAAAPAA0AAgABAAsAAAAOAA0AAgABAAsAAAANAA0AAgABAAsAAAAMAA0AAgABAAsAAAALAA0AAgABAAsAAAAKAA0AAgABAAsAAAAJAA0AAgABAAsAAAAIAA0AAgABAAsAAAAIAAwAAgABAAoAAAAHAAwAAgABAAoAAAAHAA0AAgABAAsAAAAGAA0AAgABAAsAAAAKAAkAAgABAAoAAAAOAAcAAgABAAoAAAAOAAYAAgABAAoAAAAOAAUAAgABAAoAAAAOAAQAAgABAAoAAAAOAAMAAgABAAoAAAANAAMAAgABAAoAAAAMAAMAAgABAAoAAAALAAMAAgABAAoAAAAKAAMAAgABAAoAAAAJAAMAAgABAAoAAAAIAAMAAgABAAoAAAAHAAMAAgABAAoAAAAGAAMAAgABAAoAAAAGAAQAAgABAAoAAAAGAAUAAgABAAoAAAAGAAYAAgABAAoAAAAGAAcAAgABAAoAAAAGAAgAAgABAAoAAAAGAAkAAgABAAoAAAAGAAoAAgABAAoAAAAGAAsAAgABAAoAAAAGAAwAAgABAAoAAAAHAAsAAgABAAoAAAAHAAoAAgABAAoAAAAHAAkAAgABAAoAAAAHAAgAAgABAAoAAAAHAAcAAgABAAoAAAAHAAYAAgABAAoAAAAHAAUAAgABAAoAAAAHAAQAAgABAAoAAAAIAAQAAgABAAoAAAAIAAUAAgABAAoAAAAIAAYAAgABAAoAAAAIAAcAAgABAAoAAAAIAAgAAgABAAoAAAAIAAkAAgABAAoAAAAIAAoAAgABAAoAAAAIAAsAAgABAAoAAAAJAAsAAgABAAoAAAAJAAoAAgABAAoAAAAJAAkAAgABAAoAAAAJAAgAAgABAAoAAAAJAAcAAgABAAoAAAAJAAYAAgABAAoAAAAJAAUAAgABAAoAAAAJAAQAAgABAAoAAAAKAAQAAgABAAoAAAAKAAUAAgABAAoAAAAKAAYAAgABAAoAAAAKAAcAAgABAAoAAAAKAAgAAgABAAoAAAALAAgAAgABAAoAAAALAAcAAgABAAoAAAALAAYAAgABAAoAAAALAAUAAgABAAoAAAALAAQAAgABAAoAAAAMAAQAAgABAAoAAAAMAAUAAgABAAoAAAAMAAYAAgABAAoAAAAMAAcAAgABAAoAAAAMAAgAAgABAAoAAAAMAAkAAgABAAoAAAALAAkAAgABAAoAAAALAAoAAgABAAoAAAAKAAoAAgABAAoAAAAKAAsAAgABAAoAAAAKAAwAAgABAAoAAAAJAAwAAgABAAoAAAALAAwAAgABAAoAAAALAAsAAgABAAoAAAAMAAsAAgABAAoAAAAMAAoAAgABAAoAAAANAAoAAgABAAoAAAANAAkAAgABAAoAAAANAAgAAgABAAoAAAANAAcAAgABAAoAAAANAAYAAgABAAoAAAANAAUAAgABAAoAAAANAAQAAgABAAoAAAAOAAgAAgABAAoAAAAOAAkAAgABAAoAAAAOAAoAAgABAAoAAAAOAAsAAgABAAoAAAANAAsAAgABAAoAAAANAAwAAgABAAoAAAAMAAwAAgABAAoAAAAOAAwAAgABAAoAAAAPAAwAAgABAAoAAAAPAAsAAgABAAoAAAAPAAoAAgABAAoAAAAPAAkAAgABAAoAAAAPAAgAAgABAAoAAAAPAAcAAgABAAoAAAAPAAYAAgABAAoAAAAPAAUAAgABAAoAAAAPAAQAAgABAAoAAAAPAAMAAgABAAoAAAAQAAMAAgABAAoAAAAQAAQAAgABAAoAAAAQAAUAAgABAAoAAAAQAAYAAgABAAoAAAAQAAcAAgABAAoAAAAQAAgAAgABAAoAAAAQAAkAAgABAAoAAAAQAAoAAgABAAoAAAAQAAsAAgABAAoAAAAQAAwAAgABAAoAAAARAAwAAgABAAoAAAARAAsAAgABAAoAAAARAAoAAgABAAoAAAARAAkAAgABAAoAAAARAAgAAgABAAoAAAARAAcAAgABAAoAAAARAAYAAgABAAoAAAARAAUAAgABAAoAAAARAAQAAgABAAoAAAARAAMAAgABAAoAAAASAAMAAgABAAoAAAASAAQAAgABAAoAAAASAAUAAgABAAoAAAASAAYAAgABAAoAAAASAAcAAgABAAoAAAASAAgAAgABAAoAAAASAAkAAgABAAoAAAASAAoAAgABAAoAAAASAAsAAgABAAoAAAASAAwAAgABAAoAAAATAAwAAgABAAoAAAATAAsAAgABAAoAAAATAAoAAgABAAoAAAATAAkAAgABAAoAAAATAAgAAgABAAoAAAATAAcAAgABAAoAAAATAAYAAgABAAoAAAATAAUAAgABAAoAAAATAAQAAgABAAoAAAATAAMAAgABAAoAAAAUAAMAAgABAAoAAAAUAAQAAgABAAoAAAAUAAUAAgABAAoAAAAUAAYAAgABAAoAAAAUAAcAAgABAAoAAAAUAAgAAgABAAoAAAAUAAkAAgABAAoAAAAUAAoAAgABAAoAAAAUAAsAAgABAAoAAAAUAAwAAgABAAoAAAAVAAwAAgABAAoAAAAVAAsAAgABAAoAAAAVAAoAAgABAAoAAAAVAAkAAgABAAoAAAAVAAgAAgABAAoAAAAVAAcAAgABAAoAAAAVAAYAAgABAAoAAAAVAAUAAgABAAoAAAAVAAQAAgABAAoAAAAVAAMAAgABAAoAAAAWAAMAAgABAAoAAAAWAAQAAgABAAoAAAAWAAUAAgABAAoAAAAWAAYAAgABAAoAAAAWAAcAAgABAAoAAAAWAAgAAgABAAoAAAAWAAkAAgABAAoAAAAWAAoAAgABAAoAAAAWAAsAAgABAAoAAAAWAAwAAgABAAoAAAA=")
tile_set = ExtResource("3_x1f2m")

[node name="FloorTileMapLayer" type="TileMapLayer" parent="TileMapLayers"]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAIAAQAAgAAAAUAAAAIAAsAAgAAAAcAAAAUAAsAAgACAAcAAAAUAAQAAgACAAUAAAATAAQAAgABAAUAAAASAAQAAgABAAUAAAARAAQAAgABAAUAAAAQAAQAAgABAAUAAAAPAAQAAgABAAUAAAAOAAQAAgABAAUAAAANAAQAAgABAAUAAAAMAAQAAgABAAUAAAALAAQAAgABAAUAAAAKAAQAAgABAAUAAAAJAAQAAgABAAUAAAAUAAUAAgACAAYAAAAUAAYAAgACAAYAAAAUAAcAAgACAAYAAAAUAAgAAgACAAYAAAAUAAkAAgACAAYAAAAUAAoAAgACAAYAAAAIAAUAAgAAAAYAAAAIAAYAAgAAAAYAAAAIAAcAAgAAAAYAAAAIAAgAAgAAAAYAAAAIAAkAAgAAAAYAAAAIAAoAAgAAAAYAAAATAAsAAgABAAcAAAASAAsAAgABAAcAAAARAAsAAgABAAcAAAAQAAsAAgABAAcAAAAPAAsAAgABAAcAAAAOAAsAAgABAAcAAAANAAoAAgABAAYAAAAMAAoAAgABAAYAAAAMAAsAAgABAAcAAAALAAsAAgABAAcAAAAKAAsAAgABAAcAAAAJAAsAAgABAAcAAAANAAsAAgABAAcAAAANAAcAAgABAAYAAAANAAYAAgABAAYAAAANAAUAAgABAAYAAAAMAAUAAgABAAYAAAALAAUAAgABAAYAAAAKAAUAAgABAAYAAAAJAAUAAgABAAYAAAAJAAYAAgABAAYAAAAJAAcAAgABAAYAAAAJAAgAAgABAAYAAAAJAAkAAgABAAYAAAAJAAoAAgABAAYAAAAKAAoAAgABAAYAAAAKAAkAAgABAAYAAAAKAAgAAgABAAYAAAAKAAcAAgABAAYAAAAKAAYAAgABAAYAAAALAAYAAgABAAYAAAALAAcAAgABAAYAAAALAAgAAgABAAYAAAALAAkAAgABAAYAAAALAAoAAgABAAYAAAAMAAkAAgABAAYAAAAMAAgAAgABAAYAAAAMAAcAAgABAAYAAAAMAAYAAgABAAYAAAANAAgAAgABAAYAAAANAAkAAgABAAYAAAAOAAkAAgABAAYAAAAOAAgAAgABAAYAAAAOAAcAAgABAAYAAAAOAAYAAgABAAYAAAAOAAUAAgABAAYAAAAPAAUAAgABAAYAAAAPAAYAAgABAAYAAAAPAAcAAgABAAYAAAAPAAgAAgABAAYAAAAPAAkAAgABAAYAAAAPAAoAAgABAAYAAAAOAAoAAgABAAYAAAAQAAoAAgABAAYAAAAQAAkAAgABAAYAAAAQAAgAAgABAAYAAAAQAAcAAgABAAYAAAAQAAYAAgABAAYAAAAQAAUAAgABAAYAAAARAAUAAgABAAYAAAARAAYAAgABAAYAAAARAAcAAgABAAYAAAARAAgAAgABAAYAAAARAAkAAgABAAYAAAARAAoAAgABAAYAAAASAAoAAgABAAYAAAASAAkAAgABAAYAAAASAAgAAgABAAYAAAASAAcAAgABAAYAAAASAAYAAgABAAYAAAASAAUAAgABAAYAAAATAAUAAgABAAYAAAATAAYAAgABAAYAAAATAAcAAgABAAYAAAATAAgAAgABAAYAAAATAAkAAgABAAYAAAATAAoAAgABAAYAAAA=")
tile_set = ExtResource("3_x1f2m")

[node name="Characters" type="Node2D" parent="."]

[node name="Player" type="Node2D" parent="Characters"]

[node name="PlayerFootMarkSprite2D" type="Sprite2D" parent="Characters/Player"]
self_modulate = Color(0, 0, 0, 0.2901961)
position = Vector2(370, 337)
scale = Vector2(0.5, 0.1)
texture = ExtResource("4_f4otk")

[node name="Enemy" type="Node2D" parent="Characters"]

[node name="EnemyFootMarkSprite2D2" type="Sprite2D" parent="Characters/Enemy"]
self_modulate = Color(0, 0, 0, 0.2901961)
position = Vector2(599, 207)
scale = Vector2(0.5, 0.1)
texture = ExtResource("4_f4otk")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 250)
enabled = false
zoom = Vector2(1.7, 1.7)

[node name="BattleLoopTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="BattleLoopTimer" to="." method="_on_battle_loop_timer_timeout"]
